salesforce/force-app/main/default/objects/Formula__c/Formula__c.object-meta.xml
<CustomObject>
    <description>Chemical/pharmaceutical formula with costing and pricing information</description>
    <label>Formula</label>
    <nameField>
        <label>Formula Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>