salesforce/force-app/main/default/objects/Formula__c/fields/Current_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Version__c</fullName>
    <label>Current Version</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>