salesforce/force-app/main/default/objects/Formula__c/fields/Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Entered_Date__c</fullName>
    <label>Entered Date</label>
    <type>Date</type>
</CustomField>