salesforce/force-app/main/default/objects/Formula__c/fields/Formula_Type__c.field-meta.xml
<CustomField>
    <fullName>Formula_Type__c</fullName>
    <label>Formula Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Powder</fullName><default>true</default><label>Powder</label></value>
            <value><fullName>Tablet</fullName><default>false</default><label>Tablet</label></value>
            <value><fullName>Capsule</fullName><default>false</default><label>Capsule</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>