salesforce/force-app/main/default/objects/Formula__c/fields/Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Freight_Cost__c</fullName>
    <label>Freight Cost (%)</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>