salesforce/force-app/main/default/objects/Formula__c/fields/Lab_Cost__c.field-meta.xml
<CustomField>
    <fullName>Lab_Cost__c</fullName>
    <label>Lab Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>