salesforce/force-app/main/default/objects/Formula__c/fields/Lab_Testing_Cost_Policy__c.field-meta.xml
<CustomField>
    <fullName>Lab_Testing_Cost_Policy__c</fullName>
    <label>Lab Testing Cost Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>