salesforce/force-app/main/default/objects/Formula__c/fields/Other_Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Other_Ingredients__c</fullName>
    <label>Other Ingredients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>