salesforce/force-app/main/default/objects/Formula__c/fields/Quote_Expiry_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiry_Disclaimer__c</fullName>
    <label>Quote Expiry Disclaimer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>