salesforce/force-app/main/default/objects/Formula__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>Quote Number</label>
    <displayFormat>QT-{0000000}</displayFormat>
    <startingNumber>1000</startingNumber>
    <type>AutoNumber</type>
</CustomField>