salesforce/force-app/main/default/objects/Formula__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <referenceTo>Sales_Rep__c</referenceTo>
    <relationshipLabel>Formulas</relationshipLabel>
    <relationshipName>Formulas</relationshipName>
    <type>Lookup</type>
</CustomField>