salesforce/force-app/main/default/objects/Formula__c/fields/Serving_Size__c.field-meta.xml
<CustomField>
    <fullName>Serving_Size__c</fullName>
    <label>Serving Size (mg)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>