salesforce/force-app/main/default/objects/Formula__c/fields/Servings_Per_Container__c.field-meta.xml
<CustomField>
    <fullName>Servings_Per_Container__c</fullName>
    <label>Servings Per Container</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>