salesforce/force-app/main/default/objects/Formula__c/fields/Total_Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Material_Cost__c</fullName>
    <label>Total Material Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>